# claude-mem-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
apps/dashboard/: package.json
apps/dashboard/app/: dashboard.tsx  globals.css  layout.tsx
crates/claude-mem-core/: Cargo.toml
crates/claude-mem-core/src/: lib.rs
crates/claude-mem-core/src/context/: formatters.rs  mod.rs  observation_compiler.rs  token_calculator.rs
crates/claude-mem-core/src/context/sections/: footer_renderer.rs  header_renderer.rs  mod.rs  summary_renderer.rs  timeline_renderer.rs
crates/claude-mem-core/src/db/: migrations.rs  mod.rs  observations.rs  pending_messages.rs  prompts.rs  sessions.rs  summaries.rs  timeline.rs  transactions.rs
crates/claude-mem-core/src/db/observations/: files.rs  get.rs  recent.rs  store.rs
crates/claude-mem-core/src/shared/: mod.rs  paths.rs  platform_paths.rs  platform_source.rs  project_name.rs  tag_stripping.rs  timeline_formatting.rs  worker_utils.rs
crates/claude-mem-core/src/types/: corpus.rs  mod.rs  observation.rs  pending_message.rs  prompt.rs  session.rs  summary.rs  timeline.rs  transcript.rs
crates/claude-mem-core/tests/: claude_memory_e2e.rs  mark_session_completed.rs  migration_runner.rs  observations.rs  parse_file_list.rs  pending_messages.rs  prompts.rs  session_search_path_matching.rs  sessions.rs  summaries.rs
crates/claude-mem-mcp/: Cargo.toml
crates/claude-mem-mcp/src/: lib.rs  main.rs  server.rs
crates/claude-mem-mcp/tests/: corpus_mcp_e2e.rs  fallback_summary_mcp_search.rs  mcp_tools_e2e.rs
crates/claude-mem-sdk/: Cargo.toml
crates/claude-mem-sdk/src/: lib.rs  parser.rs  prompts.rs
crates/claude-mem-sdk/tests/: parser_prompts.rs
crates/claude-mem-supervisor/: Cargo.toml
crates/claude-mem-supervisor/src/: claude_md.rs  installer.rs  lib.rs  runtime_settings.rs  supervisor.rs  worker_runtime.rs
crates/claude-mem-supervisor/src/hooks/: mod.rs
crates/claude-mem-supervisor/src/hooks/handlers/: common.rs
crates/claude-mem-supervisor/src/infrastructure/: env_sanitizer.rs  graceful_shutdown.rs  health_checker.rs  health_monitor.rs  mod.rs  process_manager.rs  process_registry.rs
crates/claude-mem-supervisor/src/transcripts/: cli.rs  config.rs  field_utils.rs  mod.rs  processor.rs  state.rs  watcher.rs
crates/claude-mem-supervisor/tests/: adapter_payload_normalization.rs  claude_hook_e2e.rs  claude_md.rs  env_sanitizer.rs  graceful_shutdown.rs  health_checker.rs  health_monitor.rs  hook_timeout_map.rs  installer_codex_fixture.rs  installer_cursor_fixture.rs  installer_gemini_fixture.rs  installer_opencode_fixture.rs  installer_transcripts.rs  process_manager.rs  process_registry.rs  validate_worker_pid_file.rs
crates/claude-mem-worker/: Cargo.toml
crates/claude-mem-worker/src/: lib.rs  main.rs
crates/claude-mem-worker/src/agents/: fallback_error_handler.rs  mod.rs  observer.rs  response_processor.rs  session_cleanup_helper.rs
crates/claude-mem-worker/src/http/: mod.rs  router.rs
crates/claude-mem-worker/src/http/routes/: data.rs  logs.rs  memory.rs  mod.rs  search.rs  session.rs  settings.rs  viewer.rs
crates/claude-mem-worker/src/knowledge/: agent.rs  builder.rs  mod.rs  renderer.rs  store.rs
crates/claude-mem-worker/src/queue/: mod.rs
crates/claude-mem-worker/src/search/: mod.rs  orchestrator.rs  qdrant.rs  result_formatter.rs  vector.rs
crates/claude-mem-worker/src/search/strategies/: mod.rs
crates/claude-mem-worker/tests/: boot_context_golden.rs  claude_http_e2e.rs  corpus_http_e2e.rs  fallback_error_handler.rs  fallback_summary_regression.rs  live_provider_smoke.rs  qdrant_client.rs  response_processor.rs  search_orchestrator.rs  search_result_formatter.rs  session_cleanup_helper.rs  session_queue_processor.rs  sqlite_search_strategy.rs
crates/claude-mem-worker/tests/fixtures/: boot_context_empty_expected.md  boot_context_rust_expected.md  boot_context_ts_v12_deltas.md  boot_context_ts_v12_expected.md  search_results_expected.md
