[package]
name = "claude-mem-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, SQLite schema, context compiler, and shared utils for claude-mem-rs"

[lints]
workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
