[package]
name = "claude-mem-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stdio MCP server over worker HTTP (rmcp-based) for claude-mem-rs"

[dependencies]
claude-mem-core = { workspace = true }
claude-mem-worker = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
