[package]
name = "claude-mem-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM-facing parser and prompt builders for claude-mem-rs (no I/O deps)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bon = { workspace = true }
