[package]
name = "claude-mem-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Process lifecycle, health checks, hook pipeline for claude-mem-rs"

[[bin]]
name = "hook"
path = "src/bin/hook.rs"

[dependencies]
claude-mem-core = { workspace = true }
claude-mem-worker = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
bon = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
