[package]
name = "claude-mem-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API, search strategies, session/queue management for claude-mem-rs"

[features]
default = []
chroma = []
qdrant = ["dep:reqwest"]

[dependencies]
claude-mem-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tower = { workspace = true }
hyper = { workspace = true }
tempfile = { workspace = true }
bon = { workspace = true }
